...
            "state" : "translated",
            "value" : "すべて（AND）"
          }
        }
      }
    },
    "All Songs" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "すべての曲"
          }
...
            "state" : "translated",
            "value" : "再生エラー"
          }
        }
      }
    },
    "Playback Position" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "再生位置"
          }
...
